@@ -4,8 +4,10 @@ import live.kavinduj.theserenitymhtc.config.FactoryConfiguration;
 import live.kavinduj.theserenitymhtc.dao.custom.PaymentDAO;
 import live.kavinduj.theserenitymhtc.entity.Payment;
 import org.hibernate.Session;
+import org.hibernate.Transaction;
 
 import java.sql.SQLException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -15,8 +17,25 @@ public class PaymentDAOImpl implements PaymentDAO {
 
     @Override
     public boolean save(Payment payment) {
-        return false;
+        Transaction transaction = null;
+
+        try (Session session = FactoryConfiguration.getInstance().getSession()) {
+            transaction = session.beginTransaction();
+
+            session.persist(payment);
+
+            transaction.commit();
+            return true;
+
+        } catch (Exception e) {
+            if (transaction != null) {
+                transaction.rollback();
+            }
+            e.printStackTrace();
+            return false;
+        }
     }
+
 
     @Override
     public boolean update(Payment payment) {
@@ -30,7 +49,12 @@ public class PaymentDAOImpl implements PaymentDAO {
 
     @Override
     public List<Payment> getAll() {
-        return List.of();
+        try (Session session = FactoryConfiguration.getInstance().getSession()) {
+            return session.createQuery("FROM Payment WHERE status = 'Pending'", Payment.class).list();
+        } catch (Exception e) {
+            e.printStackTrace();
+            return Collections.emptyList();
+        }
     }
 
     @Override
@@ -67,5 +91,33 @@ public class PaymentDAOImpl implements PaymentDAO {
     @Override
     public boolean exist(String id) throws SQLException, ClassNotFoundException {
         return false;
+    }
+
+    public boolean completePayment(String paymentId) {
+        Transaction transaction = null;
+
+        try (Session session = FactoryConfiguration.getInstance().getSession()) {
+            transaction = session.beginTransaction();
+
+            Payment payment = session.get(Payment.class, paymentId);
+
+            if (payment != null) {
+                payment.setStatus("Complete");
+
+                session.merge(payment);
+
+                transaction.commit();
+                return true;
+            } else {
+                return false;
+            }
+
+        } catch (Exception e) {
+            if (transaction != null) {
+                transaction.rollback();
+            }
+            e.printStackTrace();
+            return false;
+        }
     }
 }
